--- a/metacc/snakemake/Snakefile
+++ b/metacc/snakemake/Snakefile
@@ -41,7 +41,8 @@ rule all:
         # expand(config["directories"]["processed_data"]+"/acc/gpc_level/pseudobulk/{pseudobulk_group_by}/completed.txt", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"]),
         expand(config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"]),
         expand(config["directories"]["processed_data"]+"/acc/gpc_level/pseudobulk/{pseudobulk_group_by}", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"]),
-        config["directories"]["results"]+"/metacc/tss_profiles/precomputed_metacc_prom_200_200.txt.gz",
+        config["directories"]["results"]+"/metacc/profiles/tss/precomputed_metacc_prom_200_200.txt.gz",
+        config["directories"]["results"]+"/metacc/profiles/multiome_peaks/precomputed_metacc_multiome_peaks.txt.gz",
         # config["directories"]["results"]+"/metacc/tss_profiles/pdf/CG_ratio_vs_GC_ratio_coloured_by_nCG.pdf",
         expand(config["directories"]["processed_data"]+"/met/bigwig/{pseudobulk_group_by}/completed.txt", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"]),
         expand(config["directories"]["processed_data"]+"/acc/bigwig/{pseudobulk_group_by}/completed.txt", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"]),
@@ -299,7 +300,7 @@ rule calculate_tss_profiles:
         script = config["scripts"]["calculate_tss_profiles"],
         metadata = rules.parse_metadata_after_qc.output
     output:
-        config["directories"]["results"]+"/metacc/tss_profiles/precomputed_metacc_prom_200_200.txt.gz",
+        config["directories"]["results"]+"/metacc/profiles/tss/precomputed_metacc_prom_200_200.txt.gz",
     params:
         window_size = config["params"]["calculate_tss_profiles"]["window_size"],
         met_tile = config["params"]["calculate_tss_profiles"]["met_tile"],
@@ -313,6 +314,28 @@ rule calculate_tss_profiles:
     shell:
         "Rscript {input.script} --met_tile {params.met_tile} --acc_tile {params.acc_tile} --window_size {params.window_size} --metadata {input.metadata} \
         --anno prom_200_200 --outfile {output} > {log}"
+
+
+rule calculate_profiles_multiome_peaks:
+    input:
+        script = config["scripts"]["calculate_profiles_multiome_peaks"],
+        metadata = rules.parse_metadata_after_qc.output
+    output:
+        config["directories"]["results"]+"/metacc/profiles/multiome_peaks/precomputed_metacc_multiome_peaks.txt.gz",
+    params:
+        window_size = config["params"]["calculate_profiles_multiome_peaks"]["window_size"],
+        met_tile = config["params"]["calculate_profiles_multiome_peaks"]["met_tile"],
+        acc_tile = config["params"]["calculate_profiles_multiome_peaks"]["acc_tile"]
+    log: 
+        "logs/calculate_profiles_multiome_peaks_multiome_peaks.log"
+    threads: 
+        config["slurm"]["calculate_profiles_multiome_peaks"]["threads"]
+    resources:
+        mem_mb = config["slurm"]["quantify_feature_level"]["memory"]
+    shell:
+        "Rscript {input.script} --met_tile {params.met_tile} --acc_tile {params.acc_tile} --window_size {params.window_size} --metadata {input.metadata} \
+        --anno multiome_peaks --outfile {output} > {log}"
+
 
 rule plot_tss_profiles:
     input:
